# ow_swear_helper

./: README.md  dict.json  main.py  pyproject.toml
