[tool.poetry]
name = "ow_swear_helper"
version = "1.0.0"
description = ""
authors = ["wzyddg"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.9"
pyperclip3 = "^0.4.1"

[tool.poetry.dev-dependencies]
pylint = "^2.9.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
